@@ -7,6 +7,7 @@ import org.bukkit.NamespacedKey;
 import org.bukkit.enchantments.Enchantment;
 import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.Recipe;
 import org.bukkit.inventory.ShapedRecipe;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.example.dodalock.dodalock.utils.FormattableUtils;
@@ -16,14 +17,19 @@ import java.util.*;
 
 public class CustomItem {
     private final ItemStack itemStack;
+    private String key;
+    private String shape;
+    private String shapeMaterials;
+    private ShapedRecipe recipe;
 
     public CustomItem(Material material, int customModelData, String key) {
         itemStack = new ItemStack(material);
         createItemMeta(customModelData, key);
         if (Configurations.getConfig().isConfigItems(key.split("\\.")[1])) {
-            createRecipe(key.split("\\.")[1],
-                    Configurations.getConfig().getItemShape(key.split("\\.")[1]),
-                    Configurations.getConfig().getItemShapeMaterials(key.split("\\.")[1]));
+            this.key = key.split("\\.")[1];
+            this.shape = Configurations.getConfig().getItemShape(key.split("\\.")[1]);
+            this.shapeMaterials = Configurations.getConfig().getItemShapeMaterials(key.split("\\.")[1]);
+            createRecipe();
         }
     }
 
@@ -36,12 +42,12 @@ public class CustomItem {
         if (key.contains("master_key")) {
             itemMeta.addEnchant(Enchantment.ARROW_KNOCKBACK, 1, true);
             itemMeta.addItemFlags(ItemFlag.HIDE_ENCHANTS);
-            itemMeta.setLore(List.of(Configurations.getLanguage().translate("master_key_lore")));
+            itemMeta.setLore(Arrays.asList(Configurations.getLanguage().translate("master_key_lore")));
         }
         itemStack.setItemMeta(itemMeta);
     }
 
-    private void createRecipe(String key, String shape, String shapeMaterials) {
+    private void createRecipe() {
         Set<Character> shapeChars = new TreeSet<>();
         for (char c : shape.toCharArray()) {
             if (c != ',' && c != ' ' && c != '-') {
@@ -49,7 +55,7 @@ public class CustomItem {
             }
         }
 
-        ShapedRecipe recipe = new ShapedRecipe(NamespacedKey.minecraft(key), itemStack);
+        recipe = new ShapedRecipe(NamespacedKey.minecraft(key), itemStack);
         String[] shapeArray = FormattableUtils.getShapeArray(shape);
         if (shapeArray != null && shapeArray.length > 0) {
             recipe.shape(shapeArray);
@@ -67,6 +73,10 @@ public class CustomItem {
         }
 
         Bukkit.addRecipe(recipe);
+    }
+
+    public Recipe getRecipe() {
+        return recipe;
     }
 
     public ItemStack getItemStack() {
